# rag-example

./: .gitignore  env.example  main.py  pyproject.toml  run_api.py
api/: models.py  server.py
embedding/: __init__.py  gemini.py
misc/: proxy.py
tests/: test_gemini_embedding.py
